# agent-passport

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_proposal.md
contracts/: foundry.toml
contracts/src/: AgentPassport.sol
contracts/src/interfaces/: IIdentityRegistry.sol
contracts/test/: AgentPassport.inheritance.t.sol  AgentPassport.scenarios.t.sol  AgentPassport.t.sol
docs/gas-reports/: R001.md
docs/specs/: SPEC-R001.md
docs/storage-layouts/: R001-AgentPassport.txt
sdk-py/: .gitignore  Makefile  README.md  pyproject.toml
sdk-py/src/agent_passport/: __init__.py  abi.py  config.py  eip712.py  errors.py  models.py  registry.py
sdk-py/src/agent_passport/abi/: AgentPassport.json
sdk-py/tests/: conftest.py  test_agent_wallet.py  test_enumeration.py  test_errors.py  test_reads.py  test_writes.py
