[project]
name = "agent-passport"
version = "0.1.0"
description = "Python SDK for the Agent Passport ERC-8004 Identity Registry"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VAIA team" }]
dependencies = [
    "web3>=7.0,<8",
    "pydantic>=2.6,<3",
    "eth-account>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_passport"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_passport/abi/AgentPassport.json" = "agent_passport/abi/AgentPassport.json"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
